--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="form-container">
-      <form class="myfrom" method="POST" action="/loginInfo">
+      <form class="myfrom" method="POST" action="/login">
         <h1>login</h1>
         <h2 style="color: red">{{.}}</h2>
         <label for="email">email</label>
