--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="form-container">
-      <form class="myfrom" method="post" action="registerIngo">
+      <form class="myfrom" method="post" action="register">
         <h1>Register</h1>
         <h2>{{.}}</h2>
         <label for="email">Email</label>
