--- a/templates/login.html
+++ b/templates/login.html
@@ -12,15 +12,15 @@
       <form class="myfrom" method="POST" action="/login">
         <h1>login</h1>
         <h2 style="color: red">{{.}}</h2>
-        <label for="email">email</label>
+        <label for="email">Email or Username</label>
         <input
           class="input"
           type="text"
           name="email"
-          placeholder="Enter your email"
+          placeholder="Enter your email or username"
           required
         /><br />
-        <label for="password">password</label>
+        <label for="password">Password</label>
         <input
           class="input"
           type="password"
