load-more-comments

--- a/templates/comment.html
+++ b/templates/comment.html
@@ -71,6 +71,10 @@
             </div>
             {{end}}
           </div>
+          <div class="loading" id="loadingContainer">
+            <div class="spinner"></div>
+            Loading more comments...
+          </div>
         </div>
       </div>
     </div>
