error handlling && dockerfile

--- a/templates/comment.html
+++ b/templates/comment.html
@@ -79,6 +79,7 @@
       </div>
     </div>
   </body>
+  <script src="/static/errorhtml.js"></script>
   <script src="/static/like-dislike.js"></script>
   <script src="/static/comment.js"></script>
 </html>
