--- a/templates/comment.html
+++ b/templates/comment.html
@@ -60,7 +60,7 @@
                 <span id="like_post-{{.Id}}">{{.Likes}}</span>
               </button>
               <button
-                class="action-btn likedislikebtn {{if eq .UserInteraction -1}}disliked-btn{{end}}"
+                class="action-btn likedislikebtn {{if eq .UserInteraction -1}}liked-btn{{end}}"
                 data-id="{{.Id}}"
                 data-action="dislike"
                 data-type="comment"
