fix comment 400 error

--- a/static/error.css
+++ b/static/error.css
@@ -2,7 +2,7 @@ body {
     background-color: gray;
 }
 
-errContainer {
+.errContainer {
     height: 100vh;
     display: flex;
     justify-content: center;
